test_suite/tests/ui/identifier/other_untagged.rs
use serde_derive::Deserialize;

#[derive(Deserialize)]
#[serde(untagged)]
enum F {
    #[serde(other)]
    Other,
}

fn main() {}
